AC_PREREQ([2.71])

AC_INIT([reverc], [1.0], [ejshafran@hilma.tech])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([
  Makefile
  src/Makefile
])

AC_OUTPUT
